policy-tests/cilium-network-policy/resources/tenant-workload-no-traefik-ingress.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tenant-workload-no-traefik-ingress
  namespace: tenant
spec:
  endpointSelector:
    matchLabels:
      app: "tenant-workload"
  ingress:
    - fromEndpoints:
        - {}
