policy-tests/cilium-network-policy/resources/tenantWorkloadEgressToInternalCidr.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tenant-workload-egress-to-internal-cidr
  namespace: tenant
spec:
  endpointSelector:
    matchLabels:
      app: "tenant-workload"
  egress:
    - toCIDRSet:
        - cidr: 10.0.0.0/8
